@@ -14,40 +14,40 @@ public class SdkBridge {
 	public static String tcCreateContext(LibraryLoader loader,
 	                                     String configJson) {
 		loader.load();
-		try (MemorySession scope = MemorySession.openShared()) {
+		//try (Arena scope = SegmentScope.openShared()) {
 			return toString(
 					ton_client.tc_read_string(
-							SegmentAllocator.newNativeArena(scope),
-							ton_client.tc_create_context(ofString(configJson, scope))
-					),
-					scope
+							SegmentAllocator.nativeAllocator(SegmentScope.auto()),
+							ton_client.tc_create_context(ofString(configJson))
+					)/*,
+					scope*/
 			);
-		}
+		//}
 	}
 
 	public static SdkResponseHandler tcRequest(int contextId, int requestId, String functionName, String params) {
 		final var response = new SdkResponseHandler();
 		ton_client.tc_request(contextId,
-		                      ofString(functionName, MemorySession.openShared()),
-		                      ofString(params, MemorySession.openShared()),
+		                      ofString(functionName),
+		                      ofString(params),
 		                      requestId,
-		                      tc_response_handler_t.allocate(response, MemorySession.openShared()));
+		                      tc_response_handler_t.allocate(response, Arena.openShared().scope()));
 		return response;
 	}
 
-	public static MemorySegment ofString(String text, MemorySession scope) {
-		MemorySegment stringData = allocate(scope);
-		MemorySegment nativeString = fromJavaString(SegmentAllocator.newNativeArena(scope),
+	public static MemorySegment ofString(String text/*, Arena scope*/) {
+		MemorySegment stringData = allocate(SegmentAllocator.nativeAllocator(SegmentScope.auto()));
+		MemorySegment nativeString = fromJavaString(SegmentAllocator.nativeAllocator(SegmentScope.auto()),
 		                                            text,
 		                                            StandardCharsets.UTF_8);
-		content$set(stringData, 0, nativeString.address());
+		content$set(stringData, 0, nativeString); //TODO dubious, recheck
 		len$set(stringData, 0, ((int) nativeString.byteSize()) - 1 // minus 1 because last symbol is u0000 in UTF-8
 		);
 		return stringData;
 	}
 
-	public static String toString(MemorySegment seg, MemorySession scope) {
-		return toJavaString(seg, scope);
+	public static String toString(MemorySegment seg/*, Arena scope*/) {
+		return toJavaString(seg/*, scope*/);
 	}
 
 	private static String toJavaString(MemorySegment segment, int len) {
@@ -56,10 +56,10 @@ public class SdkBridge {
 		return new String(bytes, StandardCharsets.UTF_8);
 	}
 
-	private static String toJavaString(MemorySegment seg, MemorySession scope) {
+	private static String toJavaString(MemorySegment seg/*, Arena scope*/) {
 		if (tc_string_data_t.len$get(seg) > 0) {
-			MemoryAddress addr = tc_string_data_t.content$get(seg);
-			byte[] str = MemorySegment.ofAddress(addr, len$get(seg), scope).toArray(JAVA_BYTE);
+			MemorySegment addressSegment = tc_string_data_t.content$get(seg);
+			byte[] str = MemorySegment.ofAddress(addressSegment.address(), len$get(seg), SegmentScope.auto()).toArray(JAVA_BYTE);
 			return new String(str, StandardCharsets.UTF_8);
 		} else {
 			return "";
